# flashbar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  examples.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: README.ru.md  README.zh-CN.md
flashbar/: __init__.py  bar.py  pretty.py  spinner.py  update_check.py
tests/: test_bar.py  test_pretty.py  test_spinner_edge.py  test_update_check.py
