[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flashbar"
version = "1.4.0"
description = "Lightweight, pretty progress bars and formatted output for Python CLI apps."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "packaging>=21.0",
]
authors = [
    { name = "k38f", email = "268321423+k38f@users.noreply.github.com" },
]
keywords = ["progress", "bar", "cli", "terminal", "spinner", "loading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/k38f/flashbar"
Repository = "https://github.com/k38f/flashbar"
Issues = "https://github.com/k38f/flashbar/issues"

[tool.flit.sdist]
include = [
    "CHANGELOG.md",
    "demo.gif",
    "docs/",
    "examples.py",
    "tests/",
]

[tool.mypy]
python_version = "3.8"
files = ["flashbar"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
